--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
-<body bgcolor="#101424">
+<body bgcolor="#101424" scroll="no"   overflow-y: hidden;">
     <section class="slider">
         <div class="card">
             <div class="card-content">
