--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Product Card UI Design HTML CSS</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
+<meta name="viewport" content="width=device-width" />
 </head>
 
-<body bgcolor="#101424" scroll="no"   overflow-y: hidden;">
+<body bgcolor="#101424">
     <section class="slider">
         <div class="card">
             <div class="card-content">
