--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ardronix | vending machine</title>
     <link rel="stylesheet" href="script/Home Page/style.css">
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="script/Common/piracy protection 1.js"></script>
     <script src="script/Common/piracy protection 2.js"></script>
     <script src="script/Common/piracy protection 3.js"></script>
@@ -25,24 +24,24 @@
     <section class="slider">
         <div class="card">
             <div class="card-content">
-                <img src="images/Balaji Cream Onion Wafers.png" alt="" class="card-img">
-                <h1 class="card-title">Balaji Cream &<br>Onion Wafers</h1>
+                <img src="images/arduino nano.png" alt="" class="card-img">
+                <h1 class="card-title">Arduino Nano</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.4</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">₹5.00</p>
+                    <p class="card-price">₹1,534.38</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success" onclick="location.href='Balaji Cream & Onion Wafers.html';">Buy Now</button>
+                    <button class="btn btn-success" onclick="location.href='arduino nano.html';">Buy Now</button>
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/cochin.png" alt="" class="card-img">
-                <h1 class="card-title">Cochin Fridge Magnet</h1>
+                <img src="images/arduino uno.png" alt="" class="card-img">
+                <h1 class="card-title">Arduino Uno</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">5</span>
@@ -51,14 +50,14 @@
                     <p class="card-price">₹150.00</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success" onclick="location.href='Cochin Fridge Magnet.html';">Buy Now</button>
+                    <button class="btn btn-success" onclick="location.href='Arduino Uno.html';">Buy Now</button>
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/Munnar.png" alt="" class="card-img">
-                <h1 class="card-title">Munnar Fridge Magnet</h1>
+                <img src="images/arduino mega.png" alt="" class="card-img">
+                <h1 class="card-title">Arduino Mega</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.6</span>
@@ -73,8 +72,8 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/Coffee.png" alt="" class="card-img">
-                <h1 class="card-title">Coffee</h1>
+                <img src="images/nodemcu.png" alt="" class="card-img">
+                <h1 class="card-title">NodeMCU CP2102 Board</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.5</span>
@@ -89,8 +88,8 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/g233 prodigy gaming headset.png" alt="" class="card-img">
-                <h1 class="card-title">g233 prodigy gaming headset</h1>
+                <img src="images/out of stock.png" alt="" class="card-img">
+                <h1 class="card-title">OUT OF STOCK</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.5</span>
@@ -106,8 +105,8 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/ROG StrixmWireless gaming headset.png" alt="" class="card-img">
-                <h1 class="card-title">ROG Strixm Wireless gaming</h1>
+                <img src="images/out of stock.png" alt="" class="card-img">
+                <h1 class="card-title">OUT OF STOCK</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.4</span>
@@ -123,8 +122,8 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/Nike Running Shoese.png" alt="" class="card-img">
-                <h1 class="card-title">Nike Running Shoese</h1>
+                <img src="images/out of stock.png" alt="" class="card-img">
+                <h1 class="card-title">OUT OF STOCK</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.5</span>
@@ -140,8 +139,8 @@
         </div>
         <div class="card">
             <div class="card-content">
-                <img src="images/Running Shoes.png" alt="" class="card-img">
-                <h1 class="card-title">Running Shoes</h1>
+                <img src="images/out of stock.png" alt="" class="card-img">
+                <h1 class="card-title">OUT OF STOCK</h1>
                 <div class="card-body">
                     <div class="card-star">
                         <span class="rating-value">4.4</span>
