--- a/Arduino Nano.html
+++ b/Arduino Nano.html
@@ -465,8 +465,7 @@ html body {
       "amount": "149900", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
       "currency": "INR",
       "name": "Ardronix | Arduino Nano",
-      "description": "Arduino Nano
-      ",
+      "description": "Arduino Nano",
       "image": "https://yt3.ggpht.com/CDHehTtMoCAA5A89b3qeQioKFoHVu2cHbVQ2nCHA52wOPtlYfx2Vbr7HjtbLGojVTlPwXwcO4eg=s88-c-k-c0x00ffffff-no-rj",
       //"order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
       "handler": function (response){
