--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="rating-value">5</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">₹150.00</p>
+                    <p class="card-price">₹800.46</p>
                 </div>
                 <div class="card-footer">
                     <button class="btn btn-success" onclick="location.href='Arduino Uno.html';">Buy Now</button>
@@ -63,10 +63,10 @@
                         <span class="rating-value">4.6</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">₹150.00</p>
+                    <p class="card-price">₹1,586.58</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success" onclick="location.href='Munnar Fridge Magnet.html';">Buy Now</button>
+                    <button class="btn btn-success" onclick="location.href='Arduino Mega.html';">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -79,10 +79,10 @@
                         <span class="rating-value">4.5</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">₹200.00</p>
+                    <p class="card-price">₹349.00</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success" onclick="location.href='Coffee.html';">Buy Now</button>
+                    <button class="btn btn-success" onclick="location.href='NodeMCU CP2102 Board.html';">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -95,11 +95,10 @@
                         <span class="rating-value">4.5</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">$450.99</p>
+                    <p class="card-price">₹0</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success">Buy Now</button>
-                    <button class="btn btn-border">Add To Cart</button>
+                    <button class="btn btn-success" onclick="location.href='#';">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -112,11 +111,10 @@
                         <span class="rating-value">4.4</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">$350.99</p>
+                    <p class="card-price">₹0</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success">Buy Now</button>
-                    <button class="btn btn-border">Add To Cart</button>
+                    <button class="btn btn-success" onclick="location.href='#';">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -129,11 +127,10 @@
                         <span class="rating-value">4.5</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">$250.99</p>
+                    <p class="card-price">₹0</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success">Buy Now</button>
-                    <button class="btn btn-border">Add To Cart</button>
+                    <button class="btn btn-success" onclick="location.href='#';">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -146,11 +143,10 @@
                         <span class="rating-value">4.4</span>
                         <span class="star">&#9733;</span>
                     </div>
-                    <p class="card-price">$150.99</p>
+                    <p class="card-price">₹0</p>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success">Buy Now</button>
-                    <button class="btn btn-border">Add To Cart</button>
+                    <button class="btn btn-success" onclick="location.href='#';">Buy Now</button>
                 </div>
             </div>
         </div>
