--- a/Arduino Uno.html
+++ b/Arduino Uno.html
@@ -10,7 +10,7 @@
 <link rel="mask-icon" type="image/x-icon" href="images/LOGO.png" color="#111">
 
 
-  <title>Ardronix | Arduino Nano</title>
+  <title>Ardronix | Arduino Uno</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   
